#1: Added ability to change frequency and period using I/O state machine (but PERIODTOFREQ macro is wrong for now!)

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -11,6 +11,7 @@
     "AVR.device.frequency": 16000000,
     "AVR.programmer.type": "stk500",
     "files.associations": {
-        "api.h": "c"
+        "api.h": "c",
+        "io.h": "c"
     }
 }
